# ChangeLog for media-sound/kmetronome
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/kmetronome/ChangeLog,v 1.1 2009/12/23 21:27:14 ssuominen Exp $

*kmetronome-0.9.2 (23 Dec 2009)

  23 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  +kmetronome-0.9.2.ebuild:
  Initial commit.
